# gm-auth-sdk

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
gm_auth_sdk/: authentication.py  client.py  models.py  serializers.py  utils.py
tests/: README.md  settings.py  test_authentication.py  urls.py  views.py
